<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sitecore Up</string>

    <!-- Screen titles -->
    <string name="title_upload">Upload Media</string>
    <string name="title_edit_instance">Edit Site</string>
    <string name="title_add_instance">New Site</string>
    <string name="title_settings">Settings</string>
    <string name="title_media_browser">Media Browser</string>
    <string name="title_chose_media_folder">Upload folder</string>
    <string name="title_location">Select Location</string>

    <!-- Menu labels -->
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_refrseh">Refresh</string>
    <string name="menu_use">USE</string>

    <!-- Hints for widgets -->
    <string name="hint_media_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Domain\\Username</string>
    <string name="hint_url">Url</string>
    <string name="hint_site">Site</string>
    <string name="hint_media_folder">Media Folder</string>

    <string name="button_upload">Upload</string>
    <string name="button_browse">Browse</string>
    <string name="button_my_uploads">My Uploads</string>
    <string name="button_add_new_instance">Add new site</string>
    <string name="button_delete">Delete</string>
    <string name="button_next">Next</string>
    <string name="button_upload_later">Upload later</string>

    <string name="radiobutton_image_small">Small</string>
    <string name="radiobutton_image_medium">Medium</string>
    <string name="radiobutton_image_actual">Actual</string>

    <string name="radiobutton_upload_all">All</string>
    <string name="radiobutton_upload_completed">Completed</string>
    <string name="radiobutton_upload_not_completed">Not Completed</string>

    <string name="radiobutton_http_protocol">http://</string>
    <string name="radiobutton_https_protocol">https://</string>

    <string name="edittext_default_site">/sitecore/shell</string>

    <!-- error messages -->
    <string name="error_empty_instance_login">Login cannot be empty</string>
    <string name="error_empty_instance_url">CMS site url cannot be empty</string>
    <string name="error_wrong_instance_url">%s is not a valid CMS site url</string>
    <string name="error_wrong_instance_password">Password cannot be empty</string>
    <string name="error_upload_failed">Upload failed</string>
    <string name="error_connection_failed">Connection error, please check network settings</string>
    <string name="error_server_connection">Server connection error</string>
    <string name="error_file_missing">This image file doesn\'t exist</string>
    <string name="error">Error</string>

    <!-- toast notifications -->
    <string name="toast_instance_is_not_valid">Entered site is not valid</string>
    <string name="toast_instance_exists">Site already exists</string>
    <string name="toast_instance_deleted">Site deleted</string>
    <string name="toast_added_to_uploads">Added to My Uploads</string>

    <!-- Other texts -->
    <string name="dialog_select_image">Select Media</string>
    <string name="text_no_instances">Please set up at least one\n upload site</string>
    <string name="text_image_size">Upload image Size</string>
    <string name="text_sites">Sites</string>
    <string name="text_save_upload_folder">Upload to this folder</string>
    <string name="text_navigate_up">Up</string>
    <string name="text_retry">Retry</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_search">Search</string>
    <string name="text_site">Site</string>
    <string name="text_user">User</string>
    <string name="title_my_uploads">My Uploads</string>

    <string-array name="select_image_source">
        <item>Take a picture</item>
        <item>Record video</item>
        <item>Image from gallery</item>
        <item>Video from gallery</item>
    </string-array>

    <integer-array name="select_image_source_icons">
        <item>@drawable/ic_menu_camera</item>
        <item>@drawable/ic_action_video</item>
        <item>@drawable/ic_menu_gallery</item>
        <item>@drawable/ic_menu_video</item>
    </integer-array>

</resources>
